--- a/keeStash.html
+++ b/keeStash.html
@@ -44,7 +44,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>KeeStash — Kee's weekly stash of academic articles worth savouring. Can't render tweet</title>
+<title>KeeStash — @keefellow's weekly stash of academic articles worth savouring. Can't render tweet</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <script>window.twttr = (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0],
@@ -395,7 +395,7 @@ Error message and password prompt
 
 <li>$:/view</li>
 
-<li>A selection of my work</li>
+<li>A selection of my recent work</li>
 
 <li>About</li>
 
@@ -8777,7 +8777,7 @@ Error message and password prompt
 <pre>&lt;$macrocall $name=&quot;timeline&quot; format={{$:/language/RecentChanges/DateFormat}}/&gt;
 </pre>
 </div>
-<div caption="{{$:/language/SideBar/Tools/Caption}}" created="20171209151940500" modified="20190414053120769" side-bar="tabs" tags="" title="$:/core/ui/SideBar/Tools">
+<div caption="{{$:/language/SideBar/Tools/Caption}}" created="20171209151940500" modified="20190414053501560" side-bar="tabs" tags="" title="$:/core/ui/SideBar/Tools">
 <pre>\define lingo-base() $:/language/ControlPanel/
 \define config-title()
 $:/config/PageControlButtons/Visibility/$(listItem)$
@@ -8918,8 +8918,8 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
     }
 }</pre>
 </div>
-<div created="20190414014922847" modified="20190414024023139" title="$:/SiteSubtitle">
-<pre>Kee's weekly stash of academic articles worth savouring. &lt;br&gt;&lt;$twitter type=&quot;shareButton&quot;  text=&quot;Keefellow's stash of interesting academic articles worthy of savouring. #keestash&quot;/&gt;</pre>
+<div created="20190414014922847" modified="20190414053451727" title="$:/SiteSubtitle">
+<pre>@keefellow's weekly stash of academic articles worth savouring. &lt;br&gt;&lt;$twitter type=&quot;shareButton&quot;  text=&quot;@keefellow's stash of interesting academic articles worthy of savouring. #keestash&quot;/&gt;</pre>
 </div>
 <div created="20190414014359466" modified="20190414020432168" title="$:/SiteTitle">
 <pre>KeeStash</pre>
@@ -8939,7 +8939,7 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
 <div created="20171209153326544" modified="20190414023807534" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20171209151901920" modified="20190414053124121" title="$:/state/tab/sidebar--1835078512">
+<div created="20171209151901920" modified="20190414053505423" title="$:/state/tab/sidebar--1835078512">
 <pre>Contents</pre>
 </div>
 <div created="20190414030641885" modified="20190414044105131" title="$:/state/toc/Contents-A selection of my work-209360082">
@@ -8948,13 +8948,13 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
 <div created="20171209153748245" modified="20171211021839024" title="$:/state/toc/Contents-Topic1-209360082">
 <pre>open</pre>
 </div>
-<div created="20190414020542832" modified="20190414044113505" title="$:/state/toc/Contents-Volume 1 (April 2019)-209360082">
+<div created="20190414020542832" modified="20190414053400603" title="$:/state/toc/Contents-Volume 1 (April 2019)-209360082">
 <pre>open</pre>
 </div>
 <div created="20190414020706401" modified="20190414025023022" title="$:/state/toc/Contents/Volume 1 (April 2019)-1. 14 April 2019-209360082">
 <pre>close</pre>
 </div>
-<div created="20190414025923688" modified="20190414044115779" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 1 : 14 April 2019-209360082">
+<div created="20190414025923688" modified="20190414053402417" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 1 : 14 April 2019-209360082">
 <pre>open</pre>
 </div>
 <div list="" title="$:/StoryList">
@@ -8976,19 +8976,19 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/yhkee/Desktop/keeStash.html&quot;
+            &quot;text&quot;: &quot;https://keefellow.github.io/keeStash/keeStash.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;keefellow.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;keefellow.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -8996,7 +8996,7 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/yhkee/Desktop/keeStash.html&quot;
+            &quot;text&quot;: &quot;/keeStash/keeStash.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9004,7 +9004,7 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://keefellow.github.io&quot;
         }
     }
 }</pre>
@@ -9661,7 +9661,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div author="JeremyRuston" core-version="&gt;=5.0.0" created="20190414023637474" dependents="" description="Basic theme" modified="20190414023637474" name="Vanilla" original-plugin-type="theme" original-tags="" original-title="$:/themes/tiddlywiki/vanilla" original-type="application/json" plugin-priority="0" server-url="https://tiddlywiki.com/library/v5.1.15/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.15/index.html/$:/themes/tiddlywiki/vanilla" type="text/vnd.tiddlywiki" version="5.1.16">
 <pre></pre>
 </div>
-<div created="20171209152543022" modified="20190414053123172" title="$:/temp/search">
+<div created="20171209152543022" modified="20190414053504467" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20190414023637397" modified="20190414023637397" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.15/index.html" url="https://tiddlywiki.com/library/v5.1.15/index.html">
@@ -9785,11 +9785,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20171209154106778" modified="20171209154115137" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20190414030120419" modified="20190414030621998" tags="Contents" title="A selection of my work">
+<div created="20190414030120419" modified="20190414053356859" tags="Contents" title="A selection of my recent work">
 <pre></pre>
 </div>
-<div created="20190414015646459" modified="20190414023755708" tags="" title="About">
-<pre>Research articles of interest to me posted.</pre>
+<div created="20190414015646459" modified="20190414053341943" tags="" title="About">
+<pre>Research articles of interest to me posted on a weekly basis.</pre>
 </div>
 <div created="20190414030955952" modified="20190414031109158" tags="[[Issue 1 : 14 April 2019]]" title="Comparing the effects of goal types in a walking session with healthy adults: Preliminary evidence for open goals in physical activity">
 <pre>&lt;html&gt;&lt;div align=&quot;center&quot;&gt;&lt;iframe src=&quot;https://doi.org//10.1016/j.psychsport.2019.01.003&quot; 
@@ -9805,7 +9805,7 @@ frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/
 <pre>&lt;html&gt;&lt;div align=&quot;center&quot;&gt;&lt;iframe src=&quot;https://psyarxiv.com/w4f72&quot; 
 frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;&lt;/html&gt;</pre>
 </div>
-<div created="20171209153201678" modified="20171209160644732" tags="" title="Help">
+<div created="20171209153201678" modified="20190414053417328" tags="" title="Help">
 <pre>Click [[Toggle Sidebar Tabs]] to get to show/hide tabs.&lt;br/&gt;
 ,,Code Courtesy of [[Matabele|https://groups.google.com/forum/#!searchin/tiddlywiki/relocating$20those$20sidebar$20tabs|sort:date/tiddlywiki/dQbt-JFdRR8/IuVf0STNAQAJ]],,&lt;br/&gt;&lt;br/&gt;
 //Remember to keep only the Contents tab before going public//
@@ -9822,7 +9822,7 @@ Learn more about [[TiddlyWiki|https://tiddlywiki.com/]].&lt;br/&gt;
 <div created="20190414020457742" modified="20190414053104257" tags="[[Volume 1 (April 2019)]]" title="Issue 1 : 14 April 2019">
 <pre></pre>
 </div>
-<div created="20190414030419605" modified="20190414030644796" tags="[[A selection of my work]] mindfulness" title="Mindfulness and its relevance for sports coaches adopting nonlinear pedagogy">
+<div created="20190414030419605" list="" modified="20190414053356861" tags="[[A selection of my recent work]] mindfulness" title="Mindfulness and its relevance for sports coaches adopting nonlinear pedagogy">
 <pre>https://doi.org/10.1177/1747954119830819</pre>
 </div>
 <div created="20190414020557775" modified="20190414031141159" tags="[[Issue 1 : 14 April 2019]] [[natural language processing]]" title="Moral Foundations Twitter Corpus: A collection of 35k tweets annotated for moral sentiment">
@@ -9834,7 +9834,7 @@ frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/
 https://doi.org/10.1016/j.jrp.2018.11.004&quot; 
 frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;&lt;/html&gt;</pre>
 </div>
-<div created="20190414030155065" modified="20190414030707180" tags="[[A selection of my work]] mindfulness" title="Reflections on athletes’ mindfulness skills development: Fitts and Posner’s (1967) three stages of learning">
+<div created="20190414030155065" list="" modified="20190414053356861" tags="[[A selection of my recent work]] mindfulness" title="Reflections on athletes’ mindfulness skills development: Fitts and Posner’s (1967) three stages of learning">
 <pre>https://doi.org/10.1080/21520704.2018.1549640
 </pre>
 </div>
