--- a/keeStash.html
+++ b/keeStash.html
@@ -189,6 +189,8 @@ Error message and password prompt
 
 <li>$:/state/tab/sidebar--1835078512</li>
 
+<li>$:/state/toc/Contents-A selection of my recent work-209360082</li>
+
 <li>$:/state/toc/Contents-A selection of my work-209360082</li>
 
 <li>$:/state/toc/Contents-Topic1-209360082</li>
@@ -198,6 +200,8 @@ Error message and password prompt
 <li>$:/state/toc/Contents/Volume 1 (April 2019)-1. 14 April 2019-209360082</li>
 
 <li>$:/state/toc/Contents/Volume 1 (April 2019)-Issue 1 : 14 April 2019-209360082</li>
+
+<li>$:/state/toc/Contents/Volume 1 (April 2019)-Issue 2 : 21 April 2019-209360082</li>
 
 <li>$:/StoryList</li>
 
@@ -403,11 +407,17 @@ Error message and password prompt
 
 <li>Contents</li>
 
+<li>Draft of 'Comparing the effects of goal types in a walking session with healthy adults: Preliminary evidence for open goals in physical activity'</li>
+
 <li>Draft of 'Moral Foundations Twitter Corpus: A collection of 35k tweets annotated for moral sentiment'</li>
 
 <li>Help</li>
 
 <li>Issue 1 : 14 April 2019</li>
+
+<li>Issue 2 : 21 April 2019</li>
+
+<li>Making the black box transparent: A pre-registration template for studies using Experience Sampling Methods (ESM)</li>
 
 <li>Mindfulness and its relevance for sports coaches adopting nonlinear pedagogy</li>
 
@@ -419,9 +429,15 @@ Error message and password prompt
 
 <li>Research in Social Psychology has changed between 2011 and 2016: Larger sample sizes, more self-report measures, and more online studies.</li>
 
+<li>Scoping Review of Mindfulness Research: a Topic Modelling Approach</li>
+
 <li>sub-topicA</li>
 
 <li>TableOfContents</li>
+
+<li>The mHealth App Usability Questionnaire (MAUQ): Development and Validation Study</li>
+
+<li>The neurophysiological correlates of religious chanting</li>
 
 <li>Toggle Sidebar Tabs</li>
 
@@ -8942,19 +8958,25 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
 <div created="20171209151901920" modified="20190414053505423" title="$:/state/tab/sidebar--1835078512">
 <pre>Contents</pre>
 </div>
+<div created="20190421050042766" modified="20190421050311481" title="$:/state/toc/Contents-A selection of my recent work-209360082">
+<pre>close</pre>
+</div>
 <div created="20190414030641885" modified="20190414044105131" title="$:/state/toc/Contents-A selection of my work-209360082">
 <pre>open</pre>
 </div>
 <div created="20171209153748245" modified="20171211021839024" title="$:/state/toc/Contents-Topic1-209360082">
 <pre>open</pre>
 </div>
-<div created="20190414020542832" modified="20190414053400603" title="$:/state/toc/Contents-Volume 1 (April 2019)-209360082">
+<div created="20190414020542832" modified="20190421045501280" title="$:/state/toc/Contents-Volume 1 (April 2019)-209360082">
 <pre>open</pre>
 </div>
 <div created="20190414020706401" modified="20190414025023022" title="$:/state/toc/Contents/Volume 1 (April 2019)-1. 14 April 2019-209360082">
 <pre>close</pre>
 </div>
-<div created="20190414025923688" modified="20190414053402417" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 1 : 14 April 2019-209360082">
+<div created="20190414025923688" modified="20190421050033630" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 1 : 14 April 2019-209360082">
+<pre>close</pre>
+</div>
+<div created="20190421045806384" modified="20190421045806384" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 2 : 21 April 2019-209360082">
 <pre>open</pre>
 </div>
 <div list="" title="$:/StoryList">
@@ -8976,19 +8998,19 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://keefellow.github.io/keeStash/keeStash.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/yhkee/Desktop/keeStash.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;keefellow.github.io&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;keefellow.github.io&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;https:&quot;
+            &quot;text&quot;: &quot;file:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -8996,7 +9018,7 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/keeStash/keeStash.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/yhkee/Desktop/keeStash.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9004,7 +9026,7 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;https://keefellow.github.io&quot;
+            &quot;text&quot;: &quot;file://&quot;
         }
     }
 }</pre>
@@ -9801,6 +9823,11 @@ frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/
 &lt;&lt;toc-selective-expandable 'Contents' sort[title]&gt;&gt; 
 &lt;/div&gt;</pre>
 </div>
+<div created="20190414030955952" draft.of="Comparing the effects of goal types in a walking session with healthy adults: Preliminary evidence for open goals in physical activity" draft.title="Comparing the effects of goal types in a walking session with healthy adults: Preliminary evidence for open goals in physical activity" modified="20190421045716506" tags="[[Issue 1 : 14 April 2019]]" title="Draft of 'Comparing the effects of goal types in a walking session with healthy adults: Preliminary evidence for open goals in physical activity'">
+<pre>&lt;html&gt;&lt;div align=&quot;center&quot;&gt;&lt;iframe src=&quot;https://doi.org//10.1016/j.psychsport.2019.01.003&quot; 
+frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;&lt;/html&gt;
+</pre>
+</div>
 <div created="20190414020557775" draft.of="Moral Foundations Twitter Corpus: A collection of 35k tweets annotated for moral sentiment" draft.title="Moral Foundations Twitter Corpus: A collection of 35k tweets annotated for moral sentiment" modified="20190414031919748" tags="[[Issue 1 : 14 April 2019]] [[natural language processing]]" title="Draft of 'Moral Foundations Twitter Corpus: A collection of 35k tweets annotated for moral sentiment'">
 <pre>&lt;html&gt;&lt;div align=&quot;center&quot;&gt;&lt;iframe src=&quot;https://psyarxiv.com/w4f72&quot; 
 frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;&lt;/html&gt;</pre>
@@ -9821,6 +9848,12 @@ Learn more about [[TiddlyWiki|https://tiddlywiki.com/]].&lt;br/&gt;
 </div>
 <div created="20190414020457742" modified="20190414053104257" tags="[[Volume 1 (April 2019)]]" title="Issue 1 : 14 April 2019">
 <pre></pre>
+</div>
+<div created="20190421045509006" modified="20190421045530958" tags="[[Volume 1 (April 2019)]]" title="Issue 2 : 21 April 2019">
+<pre></pre>
+</div>
+<div created="20190421045845117" modified="20190421045914207" tags="[[Issue 2 : 21 April 2019]]" title="Making the black box transparent: A pre-registration template for studies using Experience Sampling Methods (ESM)">
+<pre>https://psyarxiv.com/seyq7/</pre>
 </div>
 <div created="20190414030419605" list="" modified="20190414053356861" tags="[[A selection of my recent work]] mindfulness" title="Mindfulness and its relevance for sports coaches adopting nonlinear pedagogy">
 <pre>https://doi.org/10.1177/1747954119830819</pre>
@@ -9843,11 +9876,20 @@ frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/
 
 </pre>
 </div>
+<div created="20190421050045792" modified="20190421050204092" tags="[[A selection of my recent work]]" title="Scoping Review of Mindfulness Research: a Topic Modelling Approach">
+<pre>https://link.springer.com/article/10.1007%2Fs12671-019-01136-4</pre>
+</div>
 <div created="20171209153724330" modified="20171209153746705" tags="Topic1" title="sub-topicA">
 <pre></pre>
 </div>
 <div created="20171209151940500" modified="20171209152037273" side-bar="tabs" tags="" title="TableOfContents">
 <pre></pre>
+</div>
+<div created="20190421045937311" modified="20190421045953905" tags="[[Issue 2 : 21 April 2019]]" title="The mHealth App Usability Questionnaire (MAUQ): Development and Validation Study">
+<pre>https://mhealth.jmir.org/2019/4/e11500/</pre>
+</div>
+<div created="20190421045630349" modified="20190421045804474" tags="[[Issue 2 : 21 April 2019]]" title="The neurophysiological correlates of religious chanting">
+<pre>https://www.nature.com/articles/s41598-019-40200-w</pre>
 </div>
 <div created="20150917200712926" modified="20171209152049144" tags="" title="Toggle Sidebar Tabs" type="application/x-tiddler">
 <pre>\define getSideTabs()
