--- a/keeStash.html
+++ b/keeStash.html
@@ -203,6 +203,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Contents/Volume 1 (April 2019)-Issue 2 : 21 April 2019-209360082</li>
 
+<li>$:/state/toc/Contents/Volume 1 (April 2019)-Issue 3 : 28 April 2019-209360082</li>
+
 <li>$:/StoryList</li>
 
 <li>$:/temp/advancedsearch</li>
@@ -403,6 +405,8 @@ Error message and password prompt
 
 <li>About</li>
 
+<li>Associations of Class-Time Sitting, Stepping and Sit-to-Stand Transitions with Cognitive Functions and Brain Activity in Children</li>
+
 <li>Comparing the effects of goal types in a walking session with healthy adults: Preliminary evidence for open goals in physical activity</li>
 
 <li>Contents</li>
@@ -411,11 +415,15 @@ Error message and password prompt
 
 <li>Draft of 'Moral Foundations Twitter Corpus: A collection of 35k tweets annotated for moral sentiment'</li>
 
+<li>Efficacy of using non-linear pedagogy to support attacking players’ individual learning objectives in elite-youth football: A randomised cross-over trial</li>
+
 <li>Help</li>
 
 <li>Issue 1 : 14 April 2019</li>
 
 <li>Issue 2 : 21 April 2019</li>
+
+<li>Issue 3 : 28 April 2019</li>
 
 <li>Making the black box transparent: A pre-registration template for studies using Experience Sampling Methods (ESM)</li>
 
@@ -434,6 +442,8 @@ Error message and password prompt
 <li>sub-topicA</li>
 
 <li>TableOfContents</li>
+
+<li>The Future of Technology in Positive Psychology: Methodological Advances in the Science of Well-Being</li>
 
 <li>The mHealth App Usability Questionnaire (MAUQ): Development and Validation Study</li>
 
@@ -8976,7 +8986,10 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
 <div created="20190414025923688" modified="20190421050033630" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 1 : 14 April 2019-209360082">
 <pre>close</pre>
 </div>
-<div created="20190421045806384" modified="20190421045806384" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 2 : 21 April 2019-209360082">
+<div created="20190421045806384" modified="20190428122924840" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 2 : 21 April 2019-209360082">
+<pre>close</pre>
+</div>
+<div created="20190428123055611" modified="20190428123055611" title="$:/state/toc/Contents/Volume 1 (April 2019)-Issue 3 : 28 April 2019-209360082">
 <pre>open</pre>
 </div>
 <div list="" title="$:/StoryList">
@@ -8998,7 +9011,7 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/yhkee/Desktop/keeStash.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/yhkee/AppData/Local/Temp/Rar$EXa0.530/keeStash-master/keeStash.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9018,7 +9031,7 @@ $:/config/PageControlButtons/Visibility/$(listItem)$
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/yhkee/Desktop/keeStash.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/yhkee/AppData/Local/Temp/Rar$EXa0.530/keeStash-master/keeStash.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9813,6 +9826,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20190414015646459" modified="20190414053341943" tags="" title="About">
 <pre>Research articles of interest to me posted on a weekly basis.</pre>
 </div>
+<div created="20190428123122733" modified="20190428123143791" tags="[[Issue 3 : 28 April 2019]]" title="Associations of Class-Time Sitting, Stepping and Sit-to-Stand Transitions with Cognitive Functions and Brain Activity in Children">
+<pre>https://doi.org/10.3390/ijerph16091482</pre>
+</div>
 <div created="20190414030955952" modified="20190414031109158" tags="[[Issue 1 : 14 April 2019]]" title="Comparing the effects of goal types in a walking session with healthy adults: Preliminary evidence for open goals in physical activity">
 <pre>&lt;html&gt;&lt;div align=&quot;center&quot;&gt;&lt;iframe src=&quot;https://doi.org//10.1016/j.psychsport.2019.01.003&quot; 
 frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;&lt;/html&gt;
@@ -9832,6 +9848,9 @@ frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/
 <pre>&lt;html&gt;&lt;div align=&quot;center&quot;&gt;&lt;iframe src=&quot;https://psyarxiv.com/w4f72&quot; 
 frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/iframe&gt;&lt;/div&gt;&lt;/html&gt;</pre>
 </div>
+<div created="20190428123015807" modified="20190428123053836" tags="[[Issue 3 : 28 April 2019]]" title="Efficacy of using non-linear pedagogy to support attacking players’ individual learning objectives in elite-youth football: A randomised cross-over trial">
+<pre>https://doi.org/10.1080/02640414.2019.1609894</pre>
+</div>
 <div created="20171209153201678" modified="20190414053417328" tags="" title="Help">
 <pre>Click [[Toggle Sidebar Tabs]] to get to show/hide tabs.&lt;br/&gt;
 ,,Code Courtesy of [[Matabele|https://groups.google.com/forum/#!searchin/tiddlywiki/relocating$20those$20sidebar$20tabs|sort:date/tiddlywiki/dQbt-JFdRR8/IuVf0STNAQAJ]],,&lt;br/&gt;&lt;br/&gt;
@@ -9850,6 +9869,9 @@ Learn more about [[TiddlyWiki|https://tiddlywiki.com/]].&lt;br/&gt;
 <pre></pre>
 </div>
 <div created="20190421045509006" modified="20190421045530958" tags="[[Volume 1 (April 2019)]]" title="Issue 2 : 21 April 2019">
+<pre></pre>
+</div>
+<div created="20190428122928761" modified="20190428122959758" tags="[[Volume 1 (April 2019)]]" title="Issue 3 : 28 April 2019">
 <pre></pre>
 </div>
 <div created="20190421045845117" modified="20190421045914207" tags="[[Issue 2 : 21 April 2019]]" title="Making the black box transparent: A pre-registration template for studies using Experience Sampling Methods (ESM)">
@@ -9884,6 +9906,9 @@ frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;600&quot;&gt;&lt;/
 </div>
 <div created="20171209151940500" modified="20171209152037273" side-bar="tabs" tags="" title="TableOfContents">
 <pre></pre>
+</div>
+<div created="20190428123212360" modified="20190428123232716" tags="[[Issue 3 : 28 April 2019]]" title="The Future of Technology in Positive Psychology: Methodological Advances in the Science of Well-Being">
+<pre>https://www.frontiersin.org/articles/10.3389/fpsyg.2018.00962/full</pre>
 </div>
 <div created="20190421045937311" modified="20190421045953905" tags="[[Issue 2 : 21 April 2019]]" title="The mHealth App Usability Questionnaire (MAUQ): Development and Validation Study">
 <pre>https://mhealth.jmir.org/2019/4/e11500/</pre>
